# mobile_app

./: CMakeLists.txt  MainForm.ui.qml  appcore.cpp  appcore.h  client.cpp  json_pars.cpp  json_pars.h  main.cpp  main.qml  mobile_app.pro
